# PicoLimbo_Tester

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  database.py  docker-compose.yml  docker-entrypoint.sh  main.py  minecraft_env.py  models.py  pico_limbo_builder.py  pyproject.toml  update_references.py  virtual_devices.py  wait_for_quit_button.py  xorg.conf
docs/: PLAN.md  PLAN_REVISED.md  PLAN_REVISED_V2.md
minecraft/: .gitignore  options.txt
plans/: PLAN.md
src/: __init__.py  config.py  database.py  di.py  main.py  models.py  versions.py
src/application/: __init__.py  build_service.py  server_context.py  server_setup_service.py  test_service.py
src/builder/: __init__.py  engine.py  worker.py
src/domain/: __init__.py  job.py  value_objects.py
src/infrastructure/: __init__.py  artifact_repository.py  artifact_storage.py  cargo_build.py  config_writer.py  git_repository.py  minecraft_launcher.py  (+3 more)
tests/: conftest.py  test_api.py  test_artifact_repository.py  test_build_service.py  test_cargo_build.py  test_config_writer.py  test_database.py  test_engine.py  test_git_repository.py  test_job.py  test_job_orchestrator.py  test_job_runner_idempotency.py  test_minecraft_env.py  test_minecraft_launcher.py  test_minecraft_runner.py  test_models.py  test_plugin_api.py  test_proxy.py  test_screen_region.py  test_server_setup_service.py  test_test_service.py  test_utils.py  test_value_objects.py  test_versions.py  test_wait_for.py  test_window_manager.py
webui/: components.json  index.html  package-lock.json  package.json  vite.config.ts
(+30 files in other folders)
