[project]
name = "pico-limbo-integration-tests"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.0",
    "fastapi>=0.136.3",
    "minecraft-launcher-lib>=8.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyscreenshot>=3.1",
    "nbtlib>=2.0.0",
    "uvicorn[standard]>=0.48.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
